--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "vinxi": "0.4.3"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "4.0.0-beta.4",
     "@types/node": "^22.5.4",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "4.0.0-beta.4",
     "typescript": "^5.6.2",
     "vite-tsconfig-paths": "^5.1.3"
   }
